--- a/style.css
+++ b/style.css
@@ -472,3 +472,76 @@ html {
     font-size: 14px;
     color: #777;
 }
+
+.about-owner {
+    padding: 100px 0;
+    background: #faf8f2;
+}
+
+.about-owner-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 60px;
+    align-items: center;
+}
+
+.owner-image {
+    max-width: 420px;   /* کنترل اندازه کلی */
+    width: 100%;
+    margin: 0 auto;
+    overflow: hidden;
+    border-radius: 25px;
+}
+
+.owner-image img {
+    width: 100%;
+    height: auto;
+    display: block;
+    border-radius: 25px;
+    transition: transform 0.4s ease, filter 0.4s ease;
+}
+
+.owner-image:hover img {
+    transform: scale(1.04);   /* خیلی ملایم */
+    filter: brightness(1.05);
+}
+
+
+.owner-text h2 {
+    font-size: 32px;
+    color: #b8963d;
+    margin-bottom: 15px;
+}
+
+.owner-text h3 {
+    font-size: 20px;
+    margin-bottom: 20px;
+    font-weight: 500;
+}
+
+.owner-text p {
+    line-height: 2;
+    color: #444;
+    margin-bottom: 15px;
+}
+
+.owner-signature {
+    margin-top: 25px;
+    font-size: 20px;
+    color: #c6a75e;
+}
+
+@media (max-width: 768px) {
+    .about-owner-content {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+}
+
+.contact-item p {
+    max-width: 280px;
+    line-height: 1.8;
+	text-justify: inter-word;
+	text-align: justify;
+	margin-top: 20px;
+}
