--- a/style.css
+++ b/style.css
@@ -13,9 +13,6 @@ body {
     line-height: 1.9;
 }
 
-.hero h1 {
-    font-family: 'Playfair Display', serif;
-}
 
 /* تیترهای فارسی */
 h2, h3 {
@@ -64,7 +61,7 @@ h2, h3 {
     position: absolute;
     inset: 0;
     background: url("images/Image11.jpg") center/cover no-repeat;
-    filter: blur(2px); /* میزان بلور */
+    filter: blur(6px); /* میزان بلور */
     z-index: 0;
     transition: 0.5s ease;
 }
@@ -100,12 +97,14 @@ h2, h3 {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-shadow: 0 5px 15px rgba(0,0,0,0.2);
+	border: white;
 }
 
 .hero p {
     margin: 20px 0;
     font-size: 18px;
     text-shadow: 0 3px 10px rgba(0,0,0,0.2);
+	color: white
 }
 
 .hero-btn {
@@ -539,10 +538,13 @@ html {
 
 .owner-text h3 {
     font-size: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 2px;
     font-weight: 500;
 }
 
+.owner-text h4 {
+	margin-bottom: 25px;
+}
 .owner-text p {
     line-height: 2;
     color: #444;
